@@ -1,5 +1,5 @@
 .pc
-.TH "ME TV" 1 "2010-01-20" "1.1.6" "Me TV Manual"
+.TH "ME TV" 1 "2010-01-21" "1.1.6" "Me TV Manual"
 
 .SH NAME
 me-tv \- a digital television (DVB) viewer for GNOME
